name:                hash-test 
version:             0.1.0.0
synopsis:            hash test
homepage:            https://github.com/ranjitjhala
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
copyright:           Ranjit Jhala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable htest
  main-is:             Version.hs
  default-language:    Haskell2010
  hs-source-dirs:      src/
  ghc-options:         -threaded
  build-depends:       base, template-haskell, githash, optparse-simple

